--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
+    "3dmol": "^2.0.3",
     "@unhead/vue": "^1.1.27",
     "@unocss/reset": "^0.52.2",
     "@vueuse/core": "^10.1.2",
